# relevreal.bitarray

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/bitarray/: __init__.py  basearray.py  bitarray.py  frozenbitarray.py  memoryview.py  utils.py
src/relevreal.bitarray/: __init__.py
tests/: test_bitarray.py  test_frozenbitarray.py  test_memoryview.py  test_relevreal.bitarray.py
