[tool.poetry]
name = "relevreal.bitarray"
version = "0.1.0"
description = "A pure python bitarray package"
authors = ["Maksymilian Szmelczynski"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
