[tool.poetry]
name = "relevreal.bitarray"
version = "0.1.0"
description = "A pure python bitarray package"
authors = ["Maksymilian Szmelczynski"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
